[tool.poetry]
name = "ciphey"
version = "5.14.1"
description = "Automated Decryption Tool"
authors = ["Brandon <brandon@skerritt.blog>"]
license = "MIT"
documentation = "https://github.com/Ciphey/Ciphey/wiki"
exclude = ["tests/hansard.txt"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest-cov = "^3.0.0"
pytest = "^7.1.2"
black = "^23.3"
neovim = "^0.3.1"
codecov = "^2.1.11"
sphinx = "^5.0.1"
sphinx-autodoc-typehints = "^1.11.1"
nltk = "^3.5"

[tool.poetry.scripts]
ciphey = 'ciphey.ciphey:main'
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

